# typst2pptx

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
tests/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_dependencies.py
typst2pptx/: cli.py  config.py  converter.py  dependencies.py
typst2pptx/src/: cli.py  config.py  converter.py
